--- a/Quiz/app/src/main/res/layout/activity_main.xml
+++ b/Quiz/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
     android:orientation="vertical"
-    android:background="#5854D1"
+    android:background="@drawable/wallpaper1"
     android:layout_height="match_parent"
+
     tools:context=".MainActivity">
 
     <TextView
@@ -17,7 +18,7 @@
         android:layout_marginTop="30dp"
         android:text="Questions: 1/x"
         android:textAlignment="center"
-        android:textColor="#000"
+        android:textColor="#CDDC39"
         android:textSize="30dp" />
 
     <LinearLayout
@@ -31,31 +32,31 @@
             android:id="@+id/txtScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginLeft="6dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginStart="6dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center_horizontal"
             android:text="Score: 0"
             android:textAlignment="center"
-            android:textColor="#000"
-            android:textSize="22sp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="6dp"
-            android:gravity="center_horizontal" />
+            android:textColor="#FFFFFF"
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/lifeView"
             android:layout_width="279dp"
             android:layout_height="wrap_content"
-            android:text="Hp:100/100"
-            android:textSize="22sp"
-            android:textAlignment="center"
-            android:textColor="#000"
-            android:layout_marginRight="10dp"
+            android:layout_marginStart="6dp"
             android:layout_marginLeft="6dp"
-            android:gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginStart="6dp"/>
+            android:layout_marginRight="10dp"
+            android:gravity="center_horizontal"
+            android:text="Hp:100/100"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="22sp" />
 
 
     </LinearLayout>
